force-app/main/default/objects/Facturas_cabeceraSet__x/Facturas_cabeceraSet__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>Facturas_cabeceraSet</externalName>
    <label>Facturas_cabeceraSet</label>
    <pluralLabel>Facturas_cabeceraSet</pluralLabel>
</CustomObject>