force-app/main/default/objects/Facturas_cabeceraSet__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Retates the sales document with the Account using the value stored in id18</description>
    <externalDeveloperName>id18</externalDeveloperName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas_cabeceraSet</relationshipLabel>
    <relationshipName>Facturas_cabeceraSet</relationshipName>
    <type>Lookup</type>
</CustomField>