force-app/main/default/objects/Facturas_cabeceraSet__x/fields/Cancelado__c.field-meta.xml
<CustomField>
    <fullName>Cancelado__c</fullName>
    <description>Cancelado</description>
    <externalDeveloperName>Cancelado</externalDeveloperName>
    <label>Cancelado</label>
    <length>10</length>
    <type>Text</type>
</CustomField>