force-app/main/default/objects/Facturas_cabeceraSet__x/fields/credit__c.field-meta.xml
<CustomField>
    <fullName>credit__c</fullName>
    <description>credit</description>
    <externalDeveloperName>credit</externalDeveloperName>
    <label>credit</label>
    <length>1</length>
    <type>Text</type>
</CustomField>