force-app/main/default/objects/Facturas_cabeceraSet__x/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <description>customer</description>
    <externalDeveloperName>customer</externalDeveloperName>
    <label>customer</label>
    <length>10</length>
    <type>Text</type>
</CustomField>