force-app/main/default/objects/Facturas_cabeceraSet__x/fields/Distchannel__c.field-meta.xml
<CustomField>
    <fullName>Distchannel__c</fullName>
    <description>Distchannel</description>
    <externalDeveloperName>Distchannel</externalDeveloperName>
    <label>Distchannel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>