force-app/main/default/objects/Facturas_cabeceraSet__x/fields/DocFi__c.field-meta.xml
<CustomField>
    <fullName>DocFi__c</fullName>
    <description>DocFi</description>
    <externalDeveloperName>DocFi</externalDeveloperName>
    <label>DocFi</label>
    <length>10</length>
    <type>Text</type>
</CustomField>