force-app/main/default/objects/Facturas_cabeceraSet__x/fields/Fktyp__c.field-meta.xml
<CustomField>
    <fullName>Fktyp__c</fullName>
    <description>Fktyp</description>
    <externalDeveloperName>Fktyp</externalDeveloperName>
    <label>Fktyp</label>
    <length>1</length>
    <type>Text</type>
</CustomField>