force-app/main/default/objects/Facturas_cabeceraSet__x/fields/Profesional__c.field-meta.xml
<CustomField>
    <fullName>Profesional__c</fullName>
    <description>Profesional</description>
    <externalDeveloperName>Profesional</externalDeveloperName>
    <label>Profesional</label>
    <length>10</length>
    <type>Text</type>
</CustomField>