force-app/main/default/objects/Facturas_cabeceraSet__x/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <description>Referencia</description>
    <externalDeveloperName>Referencia</externalDeveloperName>
    <label>Referencia</label>
    <length>16</length>
    <type>Text</type>
</CustomField>