force-app/main/default/objects/Facturas_cabeceraSet__x/fields/SALESOFFIC__c.field-meta.xml
<CustomField>
    <fullName>SALESOFFIC__c</fullName>
    <description>SALESOFFIC</description>
    <externalDeveloperName>SALESOFFIC</externalDeveloperName>
    <label>SALESOFFIC</label>
    <length>4</length>
    <type>Text</type>
</CustomField>