force-app/main/default/objects/Facturas_cabeceraSet__x/fields/Sfopportunity__c.field-meta.xml
<CustomField>
    <fullName>Sfopportunity__c</fullName>
    <description>Sfopportunity</description>
    <externalDeveloperName>Sfopportunity</externalDeveloperName>
    <label>Sfopportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>