force-app/main/default/objects/Facturas_cabeceraSet__x/listViews/JMMF_Listado_Facturas.listView-meta.xml
<ListView>
    <fullName>JMMF_Listado_Facturas</fullName>
    <columns>ExternalId</columns>
    <columns>Sfopportunity__c</columns>
    <columns>BillTo__c</columns>
    <columns>Company__c</columns>
    <columns>Distchannel__c</columns>
    <columns>Doc__c</columns>
    <columns>Dtotal__c</columns>
    <columns>Orderdate__c</columns>
    <columns>Salesorg__c</columns>
    <filterScope>Everything</filterScope>
    <label>JMMF Listado Facturas</label>
</ListView>